--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -1,1 +1,1 @@
-- Copyright (C) 2022 - iris-ioc-velo-module - stephan.mikiss@gmail.com
+- Copyright (C) 2022 - Stephan Mikiss - stephan.mikiss@gmail.com
